clusters/talos-cluster/ollama/httpRoute-cloudflare.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama-cloudflare-route
  namespace: ollama
spec:
  parentRefs:
    - name: cloudflare-gateway
      namespace: cloudflare-gateway
  hostnames:
    - "ollama.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: "600s"
        backendRequest: "600s"
      backendRefs:
        - name: ollama-service
          port: 11434
